--- a/demo-4/package.json
+++ b/demo-4/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "css-loader": "^5.2.2",
+    "lodash": "^4.17.21",
+    "style-loader": "^2.0.0"
   }
 }
